--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="lbpf">
   <head>
     <meta charset="utf-8">
     <title>Angular Stack Setup</title>
@@ -8,7 +8,8 @@
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="HomeCtrl as main">
     <h1>html works</h1>
+    <h1>angular works {{1+1}}</h1>
   </body>
 </html>
