started css, dummy content on homepage

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>Angular Stack Setup</title>
+    <title>Louis Boyle Portfolio</title>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
@@ -11,7 +11,13 @@
   </head>
   <body ng-controller="MainCtrl as main">
     <header>
-
+      <h1>louis<span>boyle</span></h1>
+      <h5>London based Junior Full Stack / Back-End web developer</h5>
+      <ul>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
     </header>
     <main ui-view></main>
     <footer>
