--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,25 @@
         <li><a href="#">Link 3</a></li>
       </ul>
     </header>
-    <main ui-view></main>
-    <footer>
 
+    <main ui-view></main>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="four columns">
+            <ul>
+              <li><a href="#">GitHub</a></li>
+              <li><a href="#">LinkedIn</a></li>
+              <li><a href="#">Angel</a></li>
+              <li><a href="#">Twitter</a></li>
+            </ul>
+          </div>
+          <div class="eight columns">
+            <p>Some other info here</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
