--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,8 @@
       <h1>louis<span>boyle</span></h1>
       <h5>London based Junior Full Stack / Back-End web developer</h5>
       <ul>
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
+        <li><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="projects">Projects</a></li>
       </ul>
     </header>
 
