added fontawesome, changed font sizez, added about section

--- a/src/index.html
+++ b/src/index.html
@@ -13,24 +13,21 @@
     <header>
       <h1>louis<span>boyle</span></h1>
       <h5>London based Junior Full Stack / Back-End web developer</h5>
-
     </header>
 
-    <main ui-view></main>
+    <main ui-view style="width: 100%;"></main>
 
     <footer>
       <div class="container">
         <div class="row">
-          <div class="four columns">
-            <ul>
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">LinkedIn</a></li>
-              <li><a href="#">Angel</a></li>
-              <li><a href="#">Twitter</a></li>
-            </ul>
+          <div class="six columns">
+            <a href="https://github.com/LBoyle" style="color:white;"><i class="fa fa-2x fa-github"></i></a>
+            <a href="https://twitter.com/BrittleSkydiver" style="color:white;"><i class="fa fa-2x fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/louis-boyle/" style="color:white;"><i class="fa fa-2x fa-linkedin"></i></a>
+            <a href="https://angel.co/louis-boyle" style="color:white;"><i class="fa fa-2x fa-angellist"></i></a>
           </div>
-          <div class="eight columns">
-            <p>Some other info here</p>
+          <div class="six columns">
+            <p>louis_boyle@hotmail.com</p>
           </div>
         </div>
       </div>
